# GafferScotch

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/GafferScotch/: AttachCurves.h  AttachCurvesDataStructures.h  CaptureMatrixWeights.h  CaptureWeight.h  CaptureWeights.h  CurvesDataStructures.h  CurvesPostProcess.h  CurvesToCurvesAttach.h  CurvesToCurvesDeform.h  Export.h  FeatherAttachBarbs.h  FeatherDeformBarbs.h  MatrixDeform.h  PointDeform.h  RigidAttachCurves.h  RigidDeformCurves.h  ScenePathUtil.h  TypeIds.h
python/GafferScotch/: __init__.py
python/GafferScotchTest/: __init__.py
python/GafferScotchUI/: AttachCurvesUI.py  CaptureMatrixWeightsUI.py  CaptureWeightUI.py  CaptureWeightsUI.py  CurvesPostProcessUI.py  CurvesToCurvesAttachUI.py  CurvesToCurvesDeformUI.py  FeatherAttachBarbsUI.py  FeatherDeformBarbsUI.py  MatrixDeformUI.py  PointDeformUI.py  RigidAttachCurvesUI.py  RigidDeformCurvesUI.py  _IconPath.py  __init__.py
src/GafferScotch/: AttachCurves.cpp  AttachCurvesDataStructures.cpp  CaptureMatrixWeights.cpp  CaptureWeight.cpp  CaptureWeights.cpp  CurvesPostProcess.cpp  CurvesToCurvesAttach.cpp  CurvesToCurvesDeform.cpp  FeatherAttachBarbs.cpp  FeatherDeformBarbs.cpp  MatrixDeform.cpp  PointDeform.cpp  RigidAttachCurves.cpp  RigidDeformCurves.cpp
src/GafferScotchModule/: GafferScotchModule.cpp
startup/gui/: examples.py  menu.py
